Atualizando projeto antigo, corrigindo alguns erros, porém, não modificando o seu núcleo

--- a/class-posicionamento/about.html
+++ b/class-posicionamento/about.html
@@ -20,6 +20,7 @@
             </section>
             <div class="apresentacao__imagem">
                 <img src="./img/Imagem.png" alt="moça feliz usando o computador"/>
+                <p>Esta imagem é meramente ilustrativa, não sou eu :) </p>
             </div>
         </main>
     </body>
