--- a/class-posicionamento/main.html
+++ b/class-posicionamento/main.html
@@ -15,9 +15,8 @@
         <main class="apresentacao">
             <section class="apresentacao__section">
                 <h1 class="apresentacao__section-titulo">Eleve seu negócio digital a outro nível<span class="apresentacao__titulo-colorido"> com um Front-End de qualidade!</span></h1>
-                <p class="apresentacao__section-paragrafo">ballbalblalblalbalblalblalblalbalblablalblalblablalblalblalbalblalblablalblalblalbalblalbalblalb
-                    blalbalblalblalbalblalblalblalblablaa;fkajfajfpajpfjapfjpajfpajpifjapfjpajpfjapjfpajpijf pajpfjapjpfja
-                     pajfpajfpi japjfp pajfpjapifjakfa[okf[ka[fka[fkakfoakpfokpoakfopka]]]]
+                <p class="apresentacao__section-paragrafo">
+                    Este é meu primeiro curso com Alura, entrando no mundo do Front-end! ;)
                 </p>
                 <h2 class="apresentacao__section-lista-titulo">Acesse minhas redes:</h2>
                 <ul class="apresentacao__section-lista">
@@ -43,6 +42,7 @@
             </section>
             <div class="apresentacao__imagem">
                 <img src="./img/Imagem.png" alt="moça feliz no computador"/>
+                <p>Esta imagem é meramente ilustrativa, não sou eu :) </p>
             </div>
         </main> 
         <footer class="rodape">
